# rules_cpp2

./: BUILD.cppfront.bazel  MODULE.bazel  README.md  cppfront.bzl
cpp2/: defs.bzl
examples/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  example_bin.cpp2  example_lib.cpp2  example_test.cpp2
